--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -53,6 +53,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp" />
 
+            <TextView
+                android:id="@+id/textViewPersistDelay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/textview_settings_persist_delay"
+                android:textSize="24sp" />
+
+            <SeekBar
+                android:id="@+id/seekBarPersistDelay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textViewPersistQDelay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/textview_settings_persist_q_delay"
+                android:textSize="24sp" />
+
+            <SeekBar
+                android:id="@+id/seekBarPersistQDelay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
