--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -40,6 +40,20 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textViewDisplaySize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/textview_settings_displaysize"
+                android:textSize="24sp" />
+
+            <SeekBar
+                android:id="@+id/seekBarDisplaySize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+
+            <TextView
                 android:id="@+id/textViewUpdateRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -154,14 +168,32 @@
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
                 android:text="@string/check_settings_screen_on" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/checkBoxCalcHP"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:text="@string/check_settings_calculate_hp" />
+
+                <CheckBox
+                    android:id="@+id/checkBoxUseAccel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:text="@string/check_settings_use_accelerometers" />
+            </LinearLayout>
 
             <CheckBox
-                android:id="@+id/checkBoxCalcHP"
+                android:id="@+id/checkBoxAlwaysPortrait"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
-                android:text="@string/check_settings_calculate_hp" />
-
+                android:text="@string/check_settings_always_portrait" />
         </LinearLayout>
     </ScrollView>
 
